# poa-bridge

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  RELEASE_NOTES.md  config.toml  db.toml  db_bu.toml
bridge/: Cargo.toml  build.rs
bridge/src/: api.rs  app.rs  config.rs  contracts.rs  database.rs  error.rs  gas_price.rs  lib.rs  message_to_mainnet.rs  transaction.rs
bridge/src/bridge/: balance.rs  batch.rs  chain_id.rs  deploy.rs  deposit_confirm.rs  deposit_relay.rs  gas_price.rs  mod.rs  nonce.rs  sequentially.rs  withdraw_confirm.rs  withdraw_relay.rs
cli/: Cargo.toml  build.rs
cli/src/: main.rs
contracts/: BridgeableToken.sol  README.md  bridge.sol
examples/: config.toml  config_bridge.toml  config_bridge_Kovan_Oracles.toml  config_bridge_Oracles-2_Ropsten.toml  config_bridge_Oracles_Kovan.toml  config_bridge_Oracles_PoA.toml  config_bridge_Oracles_Ropsten.toml  config_bridge_PoA_Kovan.toml  config_bridge_Ropsten_Oracles.toml  config_bridge_mainnet_simple.toml  config_bridge_rinkeby_simple.toml  config_bridge_simple.toml  config_bridge_simple_simple.toml  db.toml  db.toml.bak  db_Kovan_Oracles.toml  db_Oracles-2_Ropsten.toml  db_Oracles_Kovan.toml  db_Oracles_PoA.toml  db_Oracles_Ropsten.toml  db_PoA_Kovan.toml  db_Ropsten_Oracles.toml  oracles_reserved_peers  oracles_reserved_peers-2  parity_config.toml  parity_config_POA_2_private_simple.toml  parity_config_POA_private.toml  parity_config_POA_private_simple.toml  parity_config_POA_private_ui.toml  parity_config_kovan.toml  parity_config_mainnet.toml  parity_config_oracles-2.toml  parity_config_oracles.toml  parity_config_oracles_private.toml  parity_config_oracles_ui.toml  parity_config_rinkeby.toml  parity_config_ropsten.toml  parity_password  parity_password_POA_private  parity_password_kovan  (+22 more)
examples/local_dev/: bridge_start.sh  checkHomeBalance.js  curl_create_acc_foreign.sh  curl_create_acc_home.sh  curl_deposit_to_home.sh  deployToken.js  foreignWithdrawl.js  fundForeignContract.js  package-lock.json  package.json  parity_start_foreign_unlocked.sh  parity_start_home.sh  parity_start_home_unlocked.sh  readme.md  setMintAgent.js  setToken.js
examples/local_dev/config/: bridge_config.toml  parity_foreign_config.toml  parity_foreign_unlocked_config.toml  parity_home_config.toml  parity_home_unlocked_config.toml
examples/parity_POA/keys/BridgeExample/: address_book.json  dapps_history.json
examples/parity_POA/signer/: authcodes
examples/parity_POA_2_simple/chains/BridgeExample2/: user_defaults
examples/parity_POA_2_simple/network/: key
examples/parity_POA_simple/network/: key
examples/parity_kov/signer/: authcodes
examples/parity_ora-2/chains/OraclesPoA/: user_defaults
examples/parity_ora-2/network/: key
examples/parity_ora/keys/: 32a1abc7-b087-bf18-10eb-1e111f80bfb0.json
integration-tests/: Cargo.toml  bridge_config.toml  bridge_config_gas_price.toml  build.rs
integration-tests/keys/: authority.json  user.json
integration-tests/tests/: basic_deposit_then_withdraw.rs  insufficient_funds.rs
jsTests/: buy.js  config.json  deployLeftSideContract.js  deployRightSideContract.js  findContracts.js  findTxs.js  getContractDataFromBridge.js  investWithBridge.js  package.json  txData.js  utils.js
test_bridge_stuff/: Cargo.toml  bridge_config.toml
test_bridge_stuff/scripts/: parity_start_foreign.sh
test_bridge_stuff/src/: main.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: deposit_relay.rs  log_stream.rs  withdraw_confirm.rs  withdraw_relay.rs
(+35 files in other folders)
