[package]
name = "bridge"
version = "0.3.0"

[dependencies]
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1.8"
tokio-timer = "0.1.2"
toml = "0.4.2"
web3 = "0.3"
error-chain = "0.11.0-rc.2"
ethabi = "5.1"
ethabi-derive = "5.0"
ethabi-contract = "5.0"
rustc-hex = "1.0"
log = "0.3"
ethereum-types = "0.3"
pretty_assertions = "0.2.1"
ethcore = { git = "http://github.com/paritytech/parity", rev = "991f0ca" }
rlp = { git = "http://github.com/paritytech/parity", rev = "991f0ca" }
keccak-hash = { git = "http://github.com/paritytech/parity", rev = "991f0ca" }
ethcore-transaction = { git = "http://github.com/paritytech/parity", rev = "991f0ca" }
itertools = "0.7"
jsonrpc-core = "8.0"
hyper = "0.11.27"
hyper-tls = "0.1.3"

[dev-dependencies]
tempdir = "0.3"
quickcheck = "0.6.1"

[build-dependencies]
rustc_version = "0.2.2"

[features]
default = []
deploy = []
