[package]
name = "bridge-cli"
version = "0.3.0"

[[bin]]
name = "bridge"
path = "src/main.rs"

[dependencies]
bridge = { path = "../bridge" }
serde = "1.0"
serde_derive = "1.0"
tokio-core = "0.1.8"
docopt = "0.8.1"
log = "0.3"
env_logger = "0.4"
futures = "0.1.14"
jsonrpc-core = "8.0"
ctrlc = { version = "3.1", features = ["termination"] }

[features]
default = []
deploy = ["bridge/deploy"]
