[package]
name = "integration-tests"
version = "0.1.0"
authors = ["snd <kruemaxi@gmail.com>"]

[dependencies]
bridge = { path = "../bridge", features = ["deploy"] }
futures = "0.1"
jsonrpc-core = "8.0"
web3 = "0.3"
serde_json = "1.0"
pretty_assertions = "0.2.1"
tempdir = "0.3.5"
tokio-core = "0.1.8"
ethabi = "5.1"
ethabi-contract = "5.0"
ethabi-derive = "5.0"
rustc-hex = "1.0"
