[package]
name = "test_bridge_stuff"
version = "0.1.0"
authors = ["Edward Mack <ed@edwardmack.com>"]

[[bin]]
name = "test_stuff"
path = "src/main.rs"

[dependencies]
bridge = { path = "../bridge" }
tokio-core = "0.1.8"
web3 = { git = "https://github.com/tomusdrw/rust-web3", branch = "bridge" }
ethabi = "5.1"
ethabi-contract = "5.0"
ethabi-derive = "5.0"
rustc-hex = "1.0"
ethereum-types = "0.2"
