[package]
name = "tests"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]

[dependencies]
bridge = { path = "../bridge" }
futures = "0.1"
jsonrpc-core = "8.0"
web3 = "0.3"
serde_json = "1.0"
pretty_assertions = "0.2.1"
ethabi = "5.0"
ethcore = { git = "http://github.com/paritytech/parity", rev = "991f0ca" }
ethereum-types = "0.3"
rustc-hex = "1.0"
